# C_Programming

./: .gitignore  00_Collection_Functions.c  00_Functions_Easy_Level.c  Add_without_plus_sign.c  Amount of different chars in text.c  CMakeLists.txt  README.md  collection_easy_level.c  exam_readFileSortDigits.c  exit.c  reverse_singly_linked_list.c  tools.c
00_Self_Improvement/: .printfbuf_test2.c.swp  Add_without_plus_sign.c  functions.c  main.c  printfbuf_test  printfbuf_test2.c  remove_found_elements_from_linked_list.c  reverseString.c  struct_vs_inion_manual.txt  (+1 more)
12_Second_Semester_AppointmentCalendar/: CMakeLists.txt  README.md  calendar.c  calendar.h  calendar.xml  database.c  database.h  datastructure.h  datetime.c  datetime.h  list.c  list.h  main.c  menu.c  menu.h  sort.c  sort.h  termincalendar
12_Second_Semester_AppointmentCalendar/xml_swp/: calendar.xml
14_Fourth_Semester_Real_Time_Programming/03_Three_States_Process_Signals_Realtime_Signals/: .Makefile.swp  CMakeLists.txt  Makefile  childwait  childwait.c  menu.c  menu.h  numbers.txt  process.c  process.h  process_simulation  process_simulation.c  processmodel.c  processmodel.h  queue.c  queue.h  signal_VS_realtime_signal  signal_VS_realtime_signal.c  signalset_implementation  signalset_implementation.c  signalset_implementation_swp.c  signalset_with_binary_tree  signalset_with_binary_tree.c  signalset_with_signal_mask  signalset_with_signal_mask.c  sum_of_all_digits  sum_of_all_digits.c  sum_of_all_digits_realtime_signal  sum_of_all_digits_realtime_signal.c  sum_of_digits.c  sum_of_digits.h  tools.h
(+264 files in other folders)
